# Web-Scraping

./: Project 2 - Working with Web Data (1).ipynb
src/: Project 2 - Working_With_Web_Data.ipynb  pyproject.toml
src/webscrapingpython/: analyzing_dataset.py  webscraping.py  webscraping_api.py  webscraping_xml.py
