[tool.poetry]
name = "src"
version = "0.1.0"
description = "A Journey to Web Data via XML Parsing, API Integration, and Web Scraping"
authors = ["Prajeeth Nakka"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"
beautifulsoup4 = "^4.9.3"

[project.urls]
homepage = "https://github.com/nakka-prajeeth"
repository = "https://github.com/nakka-prajeeth/Web-Scraping"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"src" = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
